--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "web3.js",
-    "private": true,
+    "name": "web3",
+    "version": "0.1.1",
     "description": "Ethereum JavaScript API wrapper repository",
     "license": "LGPL-3.0",
     "engines": {
@@ -98,6 +98,7 @@
         "@chainsafe/geth-dev-assistant": "^0.1.10",
         "@ensdomains/ens": "^0.6.0",
         "@ensdomains/resolver": "^0.2.4",
+        "@ethersproject/abi": "5.0.7",
         "@types/bignumber.js": "^4.0.2",
         "@types/bn.js": "^4.11.6",
         "@types/node": "^12.12.68",
@@ -135,6 +136,10 @@
         "underscore": "1.12.1",
         "wait-port": "^0.2.9",
         "webpack": "^4.44.2",
-        "webpack-cli": "^3.3.12"
+        "webpack-cli": "^3.3.12",
+        "rlp": "^2.2.6"
+    },
+    "dependencies": {
+        "rlp": "^2.2.6"
     }
 }
