--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "web3.js",
-    "private": true,
+    "name": "@jeremiahorg/web8.js",
+    "version":"0.0.1",
     "description": "Ethereum JavaScript API wrapper repository",
     "license": "LGPL-3.0",
     "engines": {
