--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,8 @@
         "target": "esnext",
         "pretty": true,
         "module": "commonjs",
+	 "types": [
+            "node"
+        ],
     }
 }
